2006-01-16  10:10 Paul Mangan <claws@thewildbeast.co.uk>

	* src/rssyl_gtk.c
		fix display markup in label

2006-01-15  21:37 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		src/rssyl_cb_menu.c
		src/rssyl_gtk.c
		HIGify some dialogs (patch by Colin Leroy)

2006-01-14  21:08 Colin Leroy <colin@colino.net>
	* src/plugin.c
	  configure.ac
		Fix error messages
		Check for SC 1.9.100cvs140 (.subscribe)

2006-01-12  21:08 Colin Leroy <colin@colino.net>
	* src/feed.[ch]
	* src/feedprops.[ch]
	* src/rssyl.c
	* src/rssyl__cb_menu.c
		Handle --susbscribe

2006-01-12  18:35 Colin Leroy <colin@colino.net>
	* src/feed.[ch]
	* src/feedprops.[ch]
	* src/parsers.[ch]
	* src/rssyl.[ch]
	* src/rssyl_gtk.[ch]
		Add ability to fetch comments in RSS feeds.

2006-01-08  07.09 Paul Mangan <claws@thewildbeast.co.uk>

	* po/de.po: translation submitted by Stephan Sachse <white@dev-zero.com>

2006-01-03  19:20 Colin Leroy <colin@colino.net>

	* src/feed.c
	* src/feed.h
	* src/rssyl.c
		Use If-Modified-Since feature to avoid fetching the feed when
		it's not been updated

2006-01-01  09.50 Paul Mangan <claws@thewildbeast.co.uk>

	* po/fi.po: translation submitted by Flammie Pirinen <flammie@iki.fi>

2005-12-28 22:56  <colin@colino.net>
	* src/feed.c: Do not take date into account when comparing
	  feed items with no date.
	* src/rssyl_gtk.c: Put back the NULL in rssyl_popup_menu_labels

2005-12-27 19:56  Andrej Kacian <andrej@kacian.sk>
	* src/rssyl_gtk.c: Upon plugin unload, close opened folder if it's our
		folder, so s-c doesn't crash when clicking on leftover items.

2005-12-27 19:22  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Take date into account when comparing feed items.
	* configure.ac: Require s-c >=1.9.100.0

2005-12-20 19:59  Colin Leroy <colin@colino.net>
	* src/rssyl_gtk.c: Fix a potential crasher

2005-12-18 17:15  Andrej Kacian <andrej@kacian.sk>
	* src/plugin.c: Add bind_textdomain_codeset(), so non-unicode locales work.
